Change image source from 'cute.png' to 'lindo.png'
Updated image source in the HTML file.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="card">
       <div class="floating-hearts"></div>
         <!-- Pon tu imagen aquí: crea una carpeta "img" y guarda "cute.png" -->
-        <img class="hero" src="img/cute.png" alt="Cute" />
+        <img src="lindo.png" class="hero">
         <div class="hearts" aria-hidden="true">💗 💗 💗</div>
       </div>
 
@@ -56,3 +56,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
