--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="card">
       <div class="floating-hearts"></div>
         <!-- Pon tu imagen aquí: crea una carpeta "img" y guarda "cute.png" -->
-        <img src="cute.png" class="hero">
+        <img src="lindo.png" class="hero">
         <div class="hearts" aria-hidden="true">💗 💗 💗</div>
       </div>
 
@@ -56,5 +56,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
